Add files via upload
Updated with latest changes for mini search engine